--- a/index.html
+++ b/index.html
@@ -265,8 +265,65 @@
   </section>
 
   <section id="review_div">
-        <h4 class="other_titles">Our Podcasts Reviews:</h4>
+    <h4 class="other_titles">What Others Say About CodingBlocks:</h4>
+    <div id="card_stack_wrapper">
+      <div class="card review_card">
+        <h4 class="review_card_title"><a href="#0">3 years strong</a></h4>
+        <p class="review_date">07/15/2020</p>
+        <p class="review_p">I have been a weekly listener for 3 years now. <a href="#0"
+            class="highlight_min_reviewSection">The
+            content
+            of this pod has remained excellent and relevant throughout that time. The honest discussions are great and
+            have had direct impact in some cases to my daily work!</a> Thanks for all the hard work! Keep up the
+          advertisement voice outlaw! 🍻</p>
+        <p class="reviewer_name right-align">TomJerry24</p>
+      </div>
+      <div class="card review_card">
+        <h4 class="card-title"><a href="#0">Like having three virtual mentors!</a></h4>
+        <div class="card-content">
+          <p class="review_date">07/07/2020</p>
+          <p class="review_p">Great show! As someone just starting to learn programming, some of the content
+            is a bit over
+            my head, but I always get something useful out of each episode. And many of the episodes are very beginner
+            friendly. <a href="#0" class="highlight_min_reviewSection">Listening to the podcast is like having three
+              great
+              (virtual)
+              programming mentors.</a> Highly recommended!</p>
+        </div>
 
+        <p class="reviewer_name right-align">stupub</p>
+      </div>
+      <div class="card review_card">
+        <h4 class="review_card_title"><a href="#0">Grocery store</a></h4>
+        <p class="review_date">03/09/2020</p>
+        <p class="review_p"><a href="#0" class="highlight_min_reviewSection">This podcast is like a big American grocery
+            store that
+            sells developer centric “food for thought”.</a></p>
+        <p class="reviewer_name right-align">index out of range</p>
+      </div>
+      <div class="card review_card">
+        <h4 class="review_card_title"><a href="#0">Good and relevant conversation</a></h4>
+        <p class="review_date">11/25/2018</p>
+        <p class="review_p"><a href="#0" class="highlight_min_reviewSection">As a novice developer, I am learning quite
+            a bit.</a> ...
+          <a href="#0" class="highlight_min_reviewSection">It is nice to hear industry developers flesh out concepts
+            beyond just an
+            academic or instructional viewpoint and place the subject matter in everyday contexts that an industry
+            developer would encounter. </a>Even though they are experienced developers, they seem to be genuinely
+          interested in the subjects they discuss as if they were new to the industry and this is very encouraging for
+          me.
+        </p>
+        <p class="reviewer_name right-align">JonMabale</p>
+      </div>
+      <div class="card review_card">
+        <h4 class="review_card_title"><a href="#0">Podcast I’ve been looking for</a></h4>
+        <p class="review_date">08/07/2018</p>
+        <p class="review_p">I’ve been looking for an software development/architecture podcast for years to help me
+          expand
+          my knowledge and skill set as a developer. Finally found it here!</p>
+        <p class="reviewer_name right-align">ArdeChris</p>
+      </div>
+    </div>
   </section>
 
 
