havent decided on the review card design, YET

--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
           <h4 class="card-title article_card_title">Getting started with Apache Beam and Kotlin<i
               class="material-icons right">close</i></h4>
           <div class="divider"></div>
-          <p class="article_summary">Are you looking for a simple getting started guide for working with Kotlin and
+          <p class="article_summary">Are you looking for a simple getting started guide for working with Kotlin
+            and
             Apache Beam? Well
             congratulations, you
             are in the right place. I’ve been doing some live coding on the subject, and I made a teeny tiny project to
@@ -168,7 +169,7 @@
           <p class="article_summary">I’m a big fan of audio learning, and of course there are tons of great, free, dev
             podcasts but did you know that there
             are quite a few great audiobooks for devs as well?</p>
-          <p class="article_summary">
+          <p class="article_summary truncate">
             I’ve been a subscriber to Audible.com (and yes, these are affiliate links below) for a long time, but they
             have only
             recently started adding the types of programming books that I liked to read. I’ve kept track of the
@@ -194,7 +195,8 @@
           <span class="card-title">Know When to Roll Your Own or Add a Tool to Your Toolbox<i
               class="material-icons right">close</i></span>
           <div class="divider"></div>
-          <p class="article_summary">By no means have I seen everything there is to see in the world of development, but
+          <p class="article_summary">By no means have I seen everything there is to see in the world of
+            development, but
             I have been around long enough to
             see the change from needing a single database which housed all your data, to this world where there’s SO
             MUCH data that
@@ -222,7 +224,7 @@
             forgot, I want to move forward! Overall, I was pretty happy with how my technical skills progressed last
             year, but I
             think I can do better. Much better.</p>
-          <p class="article_summary">
+          <p class="article_summary truncate">
             This year I’m done trying to micromanage my future with limited information. I want to keep things simple by
             setting a
             high level focus and prioritizing habits over static goals.</p>
@@ -266,10 +268,12 @@
 
   <section id="review_div">
     <h4 class="other_titles">What Others Say About CodingBlocks:</h4>
+    <!--Card Stack Wrapper Section-->
     <div id="card_stack_wrapper">
+      <!--1st card-->
       <div class="card review_card">
         <h4 class="review_card_title"><a href="#0">3 years strong</a></h4>
-        <p class="review_date">07/15/2020</p>
+        <!-- <p class="review_date">07/15/2020</p> -->
         <p class="review_p">I have been a weekly listener for 3 years now. <a href="#0"
             class="highlight_min_reviewSection">The
             content
@@ -278,10 +282,11 @@
           advertisement voice outlaw! 🍻</p>
         <p class="reviewer_name right-align">TomJerry24</p>
       </div>
+      <!-- second card -->
       <div class="card review_card">
-        <h4 class="card-title"><a href="#0">Like having three virtual mentors!</a></h4>
-        <div class="card-content">
-          <p class="review_date">07/07/2020</p>
+        <h4 class="review_card_title"><a href="#0">Like having three virtual mentors!</a></h4>
+        <div>
+          <!-- <p class="review_date">07/07/2020</p> -->
           <p class="review_p">Great show! As someone just starting to learn programming, some of the content
             is a bit over
             my head, but I always get something useful out of each episode. And many of the episodes are very beginner
@@ -290,20 +295,21 @@
               (virtual)
               programming mentors.</a> Highly recommended!</p>
         </div>
-
         <p class="reviewer_name right-align">stupub</p>
       </div>
+      <!-- 3rd card -->
       <div class="card review_card">
         <h4 class="review_card_title"><a href="#0">Grocery store</a></h4>
-        <p class="review_date">03/09/2020</p>
+        <!-- <p class="review_date">03/09/2020</p> -->
         <p class="review_p"><a href="#0" class="highlight_min_reviewSection">This podcast is like a big American grocery
             store that
             sells developer centric “food for thought”.</a></p>
         <p class="reviewer_name right-align">index out of range</p>
       </div>
+      <!-- 4th card -->
       <div class="card review_card">
         <h4 class="review_card_title"><a href="#0">Good and relevant conversation</a></h4>
-        <p class="review_date">11/25/2018</p>
+        <!-- <p class="review_date">11/25/2018</p> -->
         <p class="review_p"><a href="#0" class="highlight_min_reviewSection">As a novice developer, I am learning quite
             a bit.</a> ...
           <a href="#0" class="highlight_min_reviewSection">It is nice to hear industry developers flesh out concepts
@@ -315,9 +321,10 @@
         </p>
         <p class="reviewer_name right-align">JonMabale</p>
       </div>
+      <!-- 5th card -->
       <div class="card review_card">
         <h4 class="review_card_title"><a href="#0">Podcast I’ve been looking for</a></h4>
-        <p class="review_date">08/07/2018</p>
+        <!-- <p class="review_date">08/07/2018</p> -->
         <p class="review_p">I’ve been looking for an software development/architecture podcast for years to help me
           expand
           my knowledge and skill set as a developer. Finally found it here!</p>
