change some colors

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
         </ul>
       </section>
 
+      <!--Right Side Banner-->
       <section id="right_side_banner">
         <!-- SEARCH SECTION -->
         <section id="search_field" class="home_grid_child">
@@ -487,7 +488,9 @@
       </section>
     </div>
     <!--END OF HOME-->
-    <div id="podcasts">Podcasts</div>
+    <div id="podcasts">
+      <h1>Podcasts</h1>
+    </div>
     <div id="videos">Videos Hello?</div>
     <div id="tipsandtricks">Tips and Tricks</div>
     <div id="articles">Articles</div>
