add background image to podcast page

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 
   <!--Podcast page-->
   <div id="podcasts">
-    <h1>Podcasts</h1>
+    <h1 id="podcast_h1">Podcasts</h1>
     <section id="content_wrapper">
       <div id="left_content">
         <!--Card 1-->
@@ -563,8 +563,11 @@
           <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
         </ul>
       </div>
-      <div id="right_player">
-
+      <div id="right_player" class="card">
+        <!-- <div id="bg_img"></div>
+        <div id="content">
+          <h5>Hello</h5>
+        </div> -->
       </div>
     </section>
   </div>
