change mainpage waves color

--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
           </div>
           <div class="collapsible-body">
             <ul>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">
+              <li class="waves-effect waves-primary waves-ripple playlist_inner_titles">
                 Code Review Standard
               </li>
               <div class="divider"></div>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">
+              <li class="waves-effect waves-primary waves-ripple playlist_inner_titles">
                 What to Look For in a Code Review
               </li>
               <div class="divider"></div>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">
+              <li class="waves-effect waves-primary waves-ripple playlist_inner_titles">
                 How to Navigate a Code Review
               </li>
             </ul>
@@ -98,39 +98,39 @@
           </div>
           <div class="collapsible-body">
             <ul>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">
+              <li class="waves-effect waves-primary waves-ripple playlist_inner_titles">
                 Reliability
               </li>
               <div class="divider"></div>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">
+              <li class="waves-effect waves-primary waves-ripple playlist_inner_titles">
                 Scalability
               </li>
               <div class="divider"></div>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">
+              <li class="waves-effect waves-primary waves-ripple playlist_inner_titles">
                 Maintainability
               </li>
               <div class="divider"></div>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">
+              <li class="waves-effect waves-primary waves-ripple playlist_inner_titles">
                 Data Models: Relational vs Document
               </li>
               <div class="divider"></div>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">
+              <li class="waves-effect waves-primary waves-ripple playlist_inner_titles">
                 Data Models: Relationships
               </li>
               <div class="divider"></div>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">
+              <li class="waves-effect waves-primary waves-ripple playlist_inner_titles">
                 Data Models: Query Languages
               </li>
               <div class="divider"></div>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">
+              <li class="waves-effect waves-primary waves-ripple playlist_inner_titles">
                 Storage and Retrieval
               </li>
               <div class="divider"></div>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">
+              <li class="waves-effect waves-primary waves-ripple playlist_inner_titles">
                 SSTables and LSM-Trees
               </li>
               <div class="divider"></div>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">
+              <li class="waves-effect waves-primary waves-ripple playlist_inner_titles">
                 To B-Tree or not to B-Tree
               </li>
             </ul>
