make progress on media player section

--- a/index.html
+++ b/index.html
@@ -605,6 +605,158 @@
 
         <!--Wrapper Grid Child 4-->
         <div id="playlist" class="wrapper_grid_child">
+          <!--1st ROW-->
+          <div class="row playlist_row" id="first_row">
+            <div class="col s2">
+              <p class="playlist_p_firstRow">Ep No.</p>
+            </div>
+            <div class="col s7">
+              <p class="playlist_p_firstRow">Ep Name</p>
+            </div>
+            <div class="col s3">
+              <p class="playlist_p_firstRow">Ep Length</p>
+            </div>
+          </div>
+          <!--Actual Playlist-->
+          <div id="playlist_wrapper">
+            <ul id="player_playlistSection">
+              <!--138-->
+              <li class="player_playlistSection_li">
+                <div class="row">
+                  <div class="col s2">
+                    <p class="playlist_p">138</p>
+                  </div>
+                  <div class="col s7 playlist_ep_name">
+                    <p class="playlist_p">The DevOps Handbook – The Technical Practices of Feedback
+                    </p>
+                  </div>
+                  <div class="col s3">
+                    <p class="playlist_p">1:51:11</p>
+                  </div>
+                </div>
+              </li>
+              <!--137-->
+              <li class="player_playlistSection_li">
+                <div class="row">
+                  <div class="col s2">
+                    <p class="playlist_p">137</p>
+                  </div>
+                  <div class="col s7 playlist_ep_name">
+                    <p class="playlist_p">The DevOps Handbook – Architecting for Low-Risk Releases
+                    </p>
+                  </div>
+                  <div class="col s3">
+                    <p class="playlist_p">2:05:22</p>
+                  </div>
+                </div>
+              </li>
+              <!--136-->
+              <li class="player_playlistSection_li">
+                <div class="row">
+                  <div class="col s2">
+                    <p class="playlist_p">136</p>
+                  </div>
+                  <div class="col s7 playlist_ep_name">
+                    <p class="playlist_p">The DevOps Handbook – The Technical Practices of Flow
+                    </p>
+                  </div>
+                  <div class="col s3">
+                    <p class="playlist_p">1:50:51</p>
+                  </div>
+                </div>
+              </li>
+              <!--135-->
+              <li class="player_playlistSection_li">
+                <div class="row">
+                  <div class="col s2">
+                    <p class="playlist_p">135</p>
+                  </div>
+                  <div class="col s7 playlist_ep_name">
+                    <p class="playlist_p">Survey Says … 2020 Stack Overflow Developer Survey
+                    </p>
+                  </div>
+                  <div class="col s3">
+                    <p class="playlist_p">2:07:41</p>
+                  </div>
+                </div>
+              </li>
+              <!--134-->
+              <li class="player_playlistSection_li">
+                <div class="row">
+                  <div class="col s2">
+                    <p class="playlist_p">134</p>
+                  </div>
+                  <div class="col s7 playlist_ep_name">
+                    <p class="playlist_p">Google’s Engineering Practices – How to Navigate a Code Review
+                    </p>
+                  </div>
+                  <div class="col s3">
+                    <p class="playlist_p">1:42:15</p>
+                  </div>
+                </div>
+              </li>
+              <!--133-->
+              <li class="player_playlistSection_li">
+                <div class="row">
+                  <div class="col s2">
+                    <p class="playlist_p">133</p>
+                  </div>
+                  <div class="col s7 playlist_ep_name">
+                    <p class="playlist_p">Google’s Engineering Practices – What to Look for in a Code Review
+                    </p>
+                  </div>
+                  <div class="col s3">
+                    <p class="playlist_p">1:41:18</p>
+                  </div>
+                </div>
+              </li>
+              <!--132-->
+              <li class="player_playlistSection_li">
+                <div class="row">
+                  <div class="col s2">
+                    <p class="playlist_p">132</p>
+                  </div>
+                  <div class="col s7 playlist_ep_name">
+                    <p class="playlist_p">Google’s Engineering Practices – Code Review Standards
+                    </p>
+                  </div>
+                  <div class="col s3">
+                    <p class="playlist_p">1:39:00</p>
+                  </div>
+                </div>
+              </li>
+              <!--131-->
+              <li class="player_playlistSection_li">
+                <div class="row">
+                  <div class="col s2">
+                    <p class="playlist_p">131</p>
+                  </div>
+                  <div class="col s7 playlist_ep_name">
+                    <p class="playlist_p">Big Data – How Far is Too Far?
+                    </p>
+                  </div>
+                  <div class="col s3">
+                    <p class="playlist_p">1:51:09</p>
+                  </div>
+                </div>
+              </li>
+              <!--130-->
+              <li class="player_playlistSection_li">
+                <div class="row">
+                  <div class="col s2">
+                    <p class="playlist_p">130</p>
+                  </div>
+                  <div class="col s7 playlist_ep_name">
+                    <p class="playlist_p">Designing Data-Intensive Applications – To B-Tree or not to B-Tree
+                    </p>
+                  </div>
+                  <div class="col s3">
+                    <p class="playlist_p">1:56:39</p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
 
         </div>
 
