fix some broken pic links in aboutUs

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
       </div>
 
       <!--Right Side Player-->
-      <div class="card-panel" id="right_side_player_wrapper">
+      <div class="card-panel" id="right_side_player_wrapper" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
 
         <!--Wrapper Grid Child 1-->
         <div id="avatar" class="wrapper_grid_child">
