--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=l, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
+
 <body>
     <nav class="nav-extended">
         <div class="nav-wrapper">
@@ -30,7 +32,7 @@
             </ul>
         </div>
     </nav>
-    
+
     <ul class="sidenav" id="mobile-demo">
         <li><a href="../pages/sponsors.html">Sponsorship</a></li>
         <li><a href="../pages/merchandise.html">Merchandise</a></li>
@@ -41,13 +43,13 @@
         <div id="about_us_title">
             <h1>About Us</h1>
         </div>
-    
+
         <div id="timeline">
             <!--Allen Underwood-->
             <div class="timeline_card_div">
                 <div class="card business_card" data-aos="fade-left">
                     <div class="profile_photo card-image">
-                        <img src="../img/profile_photo.png" alt="">
+                        <img src="../img/profile_photo.svg" alt="">
                     </div>
                     <div class="inner_card z-depth-1">
                         <div class="name">
@@ -57,13 +59,16 @@
                         <div class="divider"></div>
                         <div class="links_wrapper">
                             <ul>
-                                <li><a href="https://twitter.com/theallenu" target="_blank"><img src="../img/twitter.png"
-                                            alt="twitter_link" class="socialnetwork_link"></a></li>
-                                <li><a href="https://www.linkedin.com/in/allenunderwood" target="_blank"><img
-                                            src="../img/linkedin.png" alt="linkedin_link" class="socialnetwork_link"></a>
+                                <li><a href="https://twitter.com/theallenu" target="_blank"><img
+                                            src="../img/twitter.png" alt="twitter_link" class="socialnetwork_link"></a>
                                 </li>
-                                <li><a href="http://www.untetheredincome.com/" target="_blank"><img src="../img/round.png"
-                                            alt="untetheredincome_link" class="socialnetwork_link"></a></li>
+                                <li><a href="https://www.linkedin.com/in/allenunderwood" target="_blank"><img
+                                            src="../img/linkedin.png" alt="linkedin_link"
+                                            class="socialnetwork_link"></a>
+                                </li>
+                                <li><a href="http://www.untetheredincome.com/" target="_blank"><img
+                                            src="../img/round.png" alt="untetheredincome_link"
+                                            class="socialnetwork_link"></a></li>
                                 <li><a href="http://www.headphonereviewhq.com/" target="_blank"><img
                                             src="../img/blogger.png" alt="headphonereviewhq_link"
                                             class="socialnetwork_link"></a></li>
@@ -72,11 +77,13 @@
                     </div>
                     <div class="carousel carousel-slider center">
                         <div class="carousel-item" href="#one!">
-                            <p class="right_side_paragraph left-align">Allen has been a professional programmer who began
+                            <p class="right_side_paragraph left-align">Allen has been a professional programmer who
+                                began
                                 his life
                                 of coding
                                 <a href="#" class="highlight_min">at the ripe age of 14</a> when he
-                                began writing code to do his math homework on the handheld TRS-80 (in Basic) given to him by
+                                began writing code to do his math homework on the handheld TRS-80 (in Basic) given to
+                                him by
                                 his
                                 uncle.</p>
                         </div>
@@ -85,7 +92,8 @@
                                 Professionally he has specialized in <a href="#" class="highlight_min">web specific
                                     programming</a> for 15 years creating
                                 solutions for
-                                Fortune 100 companies. Allen is proficient in <a href="#" class="highlight_full">database
+                                Fortune 100 companies. Allen is proficient in <a href="#"
+                                    class="highlight_full">database
                                     design</a> and<a href="#" class="highlight_full"> performance tuning</a> and has
                                 specialized in developing robust <a href="#" class="highlight_full">user interfaces</a>
                                 using the latest Javascript and web
@@ -93,13 +101,16 @@
                             </p>
                         </div>
                         <div class="carousel-item" href="#three!">
-                            <p class="right_side_paragraph left-align">In his “spare” time, he loves to spend time with his
+                            <p class="right_side_paragraph left-align">In his “spare” time, he loves to spend time with
+                                his
                                 wife,
                                 twins and
                                 chihuahuas. As well as being a
-                                programmer, husband and father, he also dabbles in video production, runs a headphone review
+                                programmer, husband and father, he also dabbles in video production, runs a headphone
+                                review
                                 site,
-                                plays basketball when he can, and likes to be humbled by the younger generation in matches
+                                plays basketball when he can, and likes to be humbled by the younger generation in
+                                matches
                                 of the
                                 latest Call of Duty games.</p>
                         </div>
@@ -110,7 +121,7 @@
             <div class="timeline_card_div">
                 <div class="card business_card" data-aos="fade-right">
                     <div class="profile_photo card-image">
-                        <img src="../img/profile_photo.png" alt="">
+                        <img src="../img/profile_photo.svg" alt="">
                     </div>
                     <div class="inner_card z-depth-1">
                         <div class="name">
@@ -124,8 +135,9 @@
                                             alt="linkedin_link" class="socialnetwork_link"></a></li>
                                 <li><a href="http://joezack.com/" target="_blank"><img src="../img/blogger.png"
                                             alt="headphonereviewhq_link" class="socialnetwork_link"></a></li>
-                                <li><a href="https://twitter.com/thejoezack" target="_blank"><img src="../img/twitter.png"
-                                            alt="twitter_link" class="socialnetwork_link"></a></li>
+                                <li><a href="https://twitter.com/thejoezack" target="_blank"><img
+                                            src="../img/twitter.png" alt="twitter_link" class="socialnetwork_link"></a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -144,7 +156,8 @@
                             </p>
                         </div>
                         <div class="carousel-item" href="#three!">
-                            <p class="right_side_paragraph left-align">When he is not basking in the glow of a monitor you
+                            <p class="right_side_paragraph left-align">When he is not basking in the glow of a monitor
+                                you
                                 can find
                                 hanging out with his wife, doggies, and kitties.</p>
                         </div>
@@ -155,7 +168,7 @@
             <div class="timeline_card_div">
                 <div class="card business_card" data-aos="fade-left">
                     <div class="profile_photo card-image">
-                        <img src="../img/profile_photo.png" alt="">
+                        <img src="../img/profile_photo.svg" alt="">
                     </div>
                     <div class="inner_card z-depth-1">
                         <div class="name">
@@ -166,19 +179,22 @@
                         <div class="links_wrapper">
                             <ul>
                                 <li><a href="www.linkedin.com/in/michaeloutlaw" target="_blank"><img
-                                            src="../img/linkedin.png" alt="linkedin_link" class="socialnetwork_link"></a>
+                                            src="../img/linkedin.png" alt="linkedin_link"
+                                            class="socialnetwork_link"></a>
                                 </li>
-                                <li><a href="https://twitter.com/iamwaltuo" target="_blank"><img src="../img/twitter.png"
-                                            alt="twitter_link" class="socialnetwork_link"></a></li>
+                                <li><a href="https://twitter.com/iamwaltuo" target="_blank"><img
+                                            src="../img/twitter.png" alt="twitter_link" class="socialnetwork_link"></a>
+                                </li>
                             </ul>
                         </div>
                     </div>
                     <div class="carousel carousel-slider center">
-                        <div class="carousel-item" href="#one!" >
+                        <div class="carousel-item" href="#one!">
                             <p class="right_side_paragraph left-align">Michael Outlaw is a father, husband, and software
                                 developer based
                                 out of Atlanta, GA. <a href="#" class="highlight_min">A fan of gadgets and all things
-                                    technology</a>, when he isn’t found behind the clickety clack of his favorite keyboard
+                                    technology</a>, when he isn’t found behind the clickety clack of his favorite
+                                keyboard
                                 he’s
                                 usually found on a
                                 bicycle or
@@ -186,13 +202,14 @@
                         </div>
                         <div class="carousel-item" href="#two!">
                             <p class="right_side_paragraph left-align">
-                                A father of two boys, Michael often spends his free time teaching his boys how to lose with
+                                A father of two boys, Michael often spends his free time teaching his boys how to lose
+                                with
                                 dignity as
                                 they destroy him
                                 in game franchises like Halo and Call of Duty.
                             </p>
                         </div>
-                        <div class="carousel-item"  id="Michael_Three">
+                        <div class="carousel-item" id="Michael_Three">
                             <p class="right_side_paragraph left-align">When not sharing his love of <a href="#"
                                     class="highlight_min">Git</a>, <a href="#" class="highlight_full">C#</a>, and <a
                                     href="#" class="highlight_min">unit
@@ -217,4 +234,5 @@
         });
     </script>
 </body>
+
 </html>
