--- a/index.html
+++ b/index.html
@@ -768,7 +768,44 @@
 
   <!--End of Podcast page-->
 
-  <div id="videos">Videos Hello?</div>
+
+  <!--Video Page-->
+  <div id="videos">
+    <h1 id="video_h1">Videos</h1>
+
+    <div id="content_wrapper">
+      <!--Top Select Section-->
+      <section id="select_section">
+
+        <div id="video1" class="col video-container"><iframe src="https://www.youtube.com/embed/db7MBTg3OrA"
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe></div>
+        <div id="video2" class="col video-container"><iframe src="https://www.youtube.com/embed/JjkoSTxsnpA"
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe></div>
+        <div id="video3" class="col video-container"><iframe src="https://www.youtube.com/embed/rkFY_n-ReAM"
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe></div>
+        <div id="video4" class="col video-container"><iframe src="https://www.youtube.com/embed/3E2lhHxmpDs"
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe></div>
+
+        <ul class="tabs">
+          <li class="tab col s3 video_name_tab"><a href="#video1" class="active">Docker And Kubernetes</a></li>
+          <li class="tab col s3 video_name_tab"><a href="#video2">Over-Architechure in Software Engineering</a></li>
+          <li class="tab col s3 video_name_tab"><a href="#video3">Docker via Visual Studio for .Net Core</a></li>
+          <li class="tab col s3 video_name_tab"><a href="#video4">Public Properties and Public Variables</a></li>
+        </ul>
+
+      </section>
+      <!--Bottom Info Section-->
+      <section id="info_section">
+
+      </section>
+    </div>
+
+  </div>
+  <!--End of Video Page-->
   <div id="tipsandtricks">Tips and Tricks</div>
   <div id="articles">Articles</div>
   <div id="resources">Resources</div>
